# RayTracer

./: CMakeLists.txt  README.md
code/: CMakeLists.txt  ray.cpp
code/core/: CMakeLists.txt  Color.cpp  Color.h  Point3.cpp  Point3.h  Vector3.cpp  Vector3.h
code/geom/: CMakeLists.txt  Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  HitInfo.cpp  HitInfo.h  NormalTriangle.cpp  NormalTriangle.h  Plane.cpp  Plane.h  Primitive.cpp  Primitive.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
code/image/: CMakeLists.txt  Image.cpp  Image.h  ToneMap.cpp  ToneMap.h  ToneMapAvgLumScale.cpp  ToneMapAvgLumScale.h  ToneMapBasicClamp.cpp  ToneMapBasicClamp.h  ToneMapModifyBlue.cpp  ToneMapModifyBlue.h  ToneMapModifyGreen.cpp  ToneMapModifyGreen.h  ToneMapModifyRed.cpp  ToneMapModifyRed.h
code/imagemap/: CMakeLists.txt  ImageMap.cpp  ImageMap.h  ImageMapAvgLumScale.cpp  ImageMapAvgLumScale.h  ImageMapBasicClamp.cpp  ImageMapBasicClamp.h  ImageMapNop.cpp  ImageMapNop.h  ImageMapReinhardGlobal.cpp  ImageMapReinhardGlobal.h  ImageMapReinhardLocal.cpp  ImageMapReinhardLocal.h  ImageMapUtil.cpp  ImageMapUtil.h
code/light/: AmbientLight.cpp  AmbientLight.h  CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.h  Intensity.cpp  Intensity.h  Light.cpp  Light.h  Material.cpp  Material.h  PointLight.cpp  PointLight.h  Shading.cpp  Shading.h  SpotLight.cpp  SpotLight.h
code/logging/: CMakeLists.txt  Log.cpp  Log.h
code/parsing/: CMakeLists.txt  Parser.cpp  Parser.h  SceneData.cpp  SceneData.h
code/raygen/: CMakeLists.txt  PixelTraceData.cpp  PixelTraceData.h  ViewFrame.cpp  ViewFrame.h
code/spatial/: BVHBoundingNode.cpp  BVHBoundingNode.h  BVHLeafNode.cpp  BVHLeafNode.h  BVHNode.cpp  BVHNode.h  CMakeLists.txt  Scene.cpp  Scene.h  XYZBounds.cpp  XYZBounds.h
code/stb_image/: CMakeLists.txt
docs/: references.md  scene_file.md  updates.md
images/MyExamples/: 1sphere.tga
images/Refract/: 1sphere-refract.tga
scenes/: circles.txt  ellipses.txt  in.txt  pyramid.txt  sphere.txt  triangle.txt
tests/: CMakeLists.txt  run_tests.cpp
tests/core/: test_Color.h  test_Point3.h
tests/geom/: test_Circle.h  test_Ellipse.h
tests/image/: test_ToneMap.cpp  test_ToneMapBasicClamp.h
tests/imagemap/: test_ImageMapReinhardLocal.h  test_ImageMapUtil.h
